@@ -1,3 +1,12 @@
+2005-10-29  Moritz Schulte  <moritz@g10code.com>
+
+	* poldi-ctrl.c (cmd_remove_user): Print a warning instead of an
+	error in case the serial number could not be looked up; set ERR to
+	0 in this case and only try to remove key file in case SERIALNO is
+	non-zero.
+	(cmd_remove_user): Make sure to lookup the serial number before
+	removing the user from the user database.
+
 2005-10-26  Moritz Schulte  <moritz@g10code.com>
 
 	* poldi-ctrl.c (poldi_ctrl_options_cb): Use gpg_error_t instead of
